<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_about_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_main"
    android:orientation="vertical" >

    <include layout="@layout/toolbar" />

    <ImageView
        android:id="@+id/iv_about_logo"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_gravity="center"
        android:layout_marginTop="48dp"
        android:contentDescription="@string/cd_about_title"
        android:src="@drawable/ic_launcher_512" />

    <es.openkratio.colibribook.misc.RobotoRegularTextView
        android:id="@+id/tv_about_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="italic" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/ll_about_credits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_main"
        android:orientation="vertical">

        <es.openkratio.colibribook.misc.RobotoRegularTextView
            android:id="@+id/tv_about_projectBy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:text="@string/about_projectBy"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <es.openkratio.colibribook.misc.RobotoRegularTextView
            android:id="@+id/tv_about_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="22dp"
            android:text="@string/about_code"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColorLink="@color/btn_sidebar" />

        <es.openkratio.colibribook.misc.RobotoRegularTextView
            android:id="@+id/tv_about_design"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/about_design"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColorLink="@color/btn_sidebar" />

        <es.openkratio.colibribook.misc.RobotoRegularTextView
            android:id="@+id/tv_about_collaborate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/about_collaborate"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColorLink="@color/btn_sidebar" />

        <es.openkratio.colibribook.misc.RobotoRegularTextView
            android:id="@+id/tv_about_license"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:text="@string/about_license"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColorLink="@color/btn_sidebar" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <!-- This linearlayout has two useless views to center the icons -->

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/iv_about_okio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:contentDescription="@string/cd_about_web_openkratio"
            android:longClickable="false"
            android:src="@drawable/ic_okio" />

        <ImageView
            android:id="@+id/iv_about_github"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:contentDescription="@string/cd_about_web_github"
            android:longClickable="false"
            android:src="@drawable/ic_github" />

        <ImageView
            android:id="@+id/iv_about_mail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:contentDescription="@string/cd_about_mail"
            android:longClickable="false"
            android:src="@drawable/ic_mail" />

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>