<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_splashscreen"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".InitActivity" >

    <ImageView
        android:id="@+id/tv_init_title"
        android:layout_width="240dp"
        android:layout_height="320dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/cd_splash_icon"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_splash" />

    <LinearLayout
        android:id="@+id/ll_init_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:orientation="vertical"
        android:visibility="gone" >

        <es.openkratio.colibribook.misc.RobotoRegularTextView
            android:id="@+id/tv_init_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:textColor="@color/grey33"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ProgressBar
            android:id="@+id/pb_init"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="50dp"
            style="@style/CustomProgressBar" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_init_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical"
        android:visibility="gone" >

        <es.openkratio.colibribook.misc.RobotoRegularTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/grey33"
            android:textSize="18sp"
            android:padding="16dp"
            android:text="@string/tv_init_error" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="retry"
            android:text="@string/btn_init_retry" />
    </LinearLayout>

</RelativeLayout>