<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_sidebar"
    android:orientation="vertical"
    android:padding="12dp" >

    <LinearLayout
        android:id="@+id/ll_sidebar_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true">

        <TextView
            android:id="@+id/tv_sidebar_searchby"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Buscar por"
            android:textColor="#999"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/spinner_sidebar_searchby"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:entries="@array/searchby" />

    </LinearLayout>

    <EditText
        android:id="@+id/et_sidebar_query"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="30dp"
        android:inputType="text"
        android:lines="1" />

    <Spinner
        android:id="@+id/spinner_sidebar_parties"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="30dp" />

    <Spinner
        android:id="@+id/spinner_sidebar_divisions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="30dp" />

    <LinearLayout
        android:id="@+id/ll_sidebar_search_btns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/ll_sidebar_search">

        <Button
            android:id="@+id/btn_sidebar_reset"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:background="@drawable/btn_sidebar"
            android:text="@string/btn_sidebar_search_reset" />

        <Button
            android:id="@+id/btn_sidebar_dosearch"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_sidebar"
            android:textColor="@color/white"
            android:text="@string/btn_sidebar_dosearch" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_sidebar_mydivision"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_sidebar_search_btns"
        android:layout_marginTop="48dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:textColor="@color/white"
        android:background="@drawable/btn_sidebar"
        android:text="@string/btn_sidebar_mydivision" />

</RelativeLayout>